// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button Snapshot Tests matches snapshot for disabled state 1`] = `
<button
  class="primary medium"
  disabled=""
>
  <span>
    Disabled Button
  </span>
</button>
`;

exports[`Button Snapshot Tests matches snapshot for loading state 1`] = `
<button
  class="primary medium loading"
  disabled=""
>
  <span>
    Loading Button
  </span>
  <div
    class="spinner"
  >
    <svg
      class="spinnerIcon"
      fill="none"
      viewBox="0 0 24 24"
    >
      <circle
        class="opacity-25"
        cx="12"
        cy="12"
        r="10"
        stroke="currentColor"
        stroke-width="4"
      />
      <path
        class="opacity-75"
        d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
        fill="currentColor"
      />
    </svg>
  </div>
</button>
`;

exports[`Button Snapshot Tests matches snapshot for primary variant 1`] = `
<button
  class="primary medium"
>
  <span>
    Primary Button
  </span>
</button>
`;

exports[`Button Snapshot Tests matches snapshot for secondary variant 1`] = `
<button
  class="secondary medium"
>
  <span>
    Secondary Button
  </span>
</button>
`;
